添加生成表的方法 createTable()

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>FormTree</title>
+    <style type="text/css">
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        td {
+            padding: 3px;
+            text-align: center;
+            border: 1px solid grey;
+        }
+
+    </style>
 </head>
 <body>
 
 </body>
-<script type="module" src="app.js"></script>
+<script src="app.js" type="module"></script>
 </html>
